feat: will be switching to RSyntaxTextArea